# yt-cli

./: .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  batch_create_template.csv  batch_update_template.csv  commands.md  coverage_report.txt  docs-improvement.md  docs-updates.md  justfile  package-lock.json  pyproject.toml  test_runner.py  tox.ini
.claude/: settings.local.json
.claude/agents/: cli-tester.md
.claude/commands/: deep-review.md  feedback.md  implement.md  review-my-code.md
.claude/skills/speckit-implement/: SKILL.md
.claude/skills/speckit-specify/: SKILL.md
.claude/skills/speckit-tasks/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-linkcheck.yml  profile_contributors.yml  release.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: Makefile  changelog.rst  command-aliases.rst  conf.py  configuration.rst  custom-fields.rst  developer-guidelines.md  developer-guidelines.rst  development.rst  error-handling.rst  index.rst  installation.rst  learning-path.rst  logging.rst  performance.md  performance.rst  pre-commit-troubleshooting.rst  progress-indicators.md  progress-indicators.rst  quickstart.rst  requirements.txt  security.rst  ssl-troubleshooting.rst  troubleshooting.rst  tutorial.md  tutorial.rst  workflows.rst  youtrack-concepts.rst
docs/api/: client.rst  exceptions.rst  index.rst  models.rst  utils.rst
docs/api/_autosummary/: youtrack_cli.client.rst  youtrack_cli.exceptions.rst  youtrack_cli.models.rst  youtrack_cli.utils.rst
docs/commands/: admin.rst  alias.rst  articles.rst  audit.rst  auth.rst  boards.rst  burndown.rst  completion.rst  config.rst  groups.rst  index.rst  issues.rst  ls.rst  new.rst  projects.rst  reports.rst  security.rst  setup.rst  time.rst  tutorial.rst  users.rst  velocity.rst
scratch/: article-reorder-implementation-plan.md  youtrack-article-reorder-research.md
scripts/: pre-commit-doctor.sh  pre-commit-fast.sh  pre-commit-quick-fix.sh
specs/001-fix-state-filter/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-state-filter/checklists/: requirements.md
specs/002-ci-py315-speedup/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ci-py315-speedup/checklists/: requirements.md
specs/003-security-fixes/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-security-fixes/checklists/: requirements.md
tests/: __init__.py  conftest.py  test_admin.py  test_articles.py  test_auth.py  test_batch.py  test_boards.py  test_cache.py  test_client.py  test_common.py  test_config.py  test_console.py  test_custom_field_manager.py  test_docker_tutorial.py  test_documentation.py  test_error_improvements.py  test_exceptions.py  test_field_selection.py  test_help_system.py  test_issues.py  test_logging.py  test_main.py  test_models.py  test_pagination.py  test_panels.py  test_performance.py  test_performance_benchmark.py  test_projects.py  test_reports.py  test_security.py  test_security_fixes.py  test_services.py  test_services_base.py  test_services_issues.py  test_services_projects.py  test_services_users.py  test_ssl_certificates.py  test_themes.py  test_time.py  test_trees.py  (+4 more)
tests/commands/: __init__.py  test_common.py  test_tutorial.py  test_users.py
tests/integration/: __init__.py  conftest.py  test_auth_integration.py  test_issues_integration.py  test_issues_workflows.py  test_projects_e2e.py  test_projects_integration.py  test_time_tracking_integration.py  test_users_integration.py
tests/managers/: __init__.py  test_issues.py  test_projects.py  test_users.py
tests/services/: test_issues.py  test_projects.py  test_users.py
tests/tutorial/: test_docker_utils.py  test_modules.py
youtrack_cli/: HELP_STYLE_GUIDE.md  __init__.py  admin.py  article_recreation.py  articles.py  auth.py  batch.py  boards.py  browser_reorder.py  cache.py  client.py  common.py  config.py  console.py  custom_field_manager.py  custom_field_types.py  deep_api_explorer.py  error_formatting.py  exceptions.py  field_selection.py  help_system.py  issues.py  logging.py  main.py  models.py  network_monitor.py  pagination.py  panels.py  performance.py  performance_benchmark.py  progress.py  projects.py  reports.py  security.py  themes.py  time.py  trees.py  users.py  utils.py  validation.py
youtrack_cli/cli_utils/: __init__.py  aliases.py  validation.py
youtrack_cli/commands/: __init__.py  articles.py  boards.py  common.py  issues.py  projects.py  time_tracking.py  tutorial.py  users.py
youtrack_cli/managers/: __init__.py  issues.py  projects.py  users.py
youtrack_cli/services/: __init__.py  base.py  field_cache.py  issues.py  projects.py  users.py
youtrack_cli/tutorial/: __init__.py  core.py  docker_utils.py  executor.py  modules.py  progress.py
youtrack_cli/utils/: __init__.py
yt_cli/: __init__.py
