[project]
name = "youtrack-cli"
version = "0.5.1"
description = "YouTrack CLI - Command line interface for JetBrains YouTrack issue tracking system"
readme = "README.md"
requires-python = ">=3.9, <3.14"
license = { text = "MIT" }
authors = [
    { name = "Ryan Murphy", email = "ryan@example.com" },
]
keywords = ["youtrack", "cli", "issue-tracking", "jetbrains", "project-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "textual>=0.40.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "tomli>=1.2.0; python_version<'3.11'",
    "structlog>=25.4.0",
    "keyring>=25.0.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/ryan-murphy/yt-cli"
Documentation = "https://yt-cli.readthedocs.io/"
Repository = "https://github.com/ryan-murphy/yt-cli.git"
Issues = "https://github.com/ryan-murphy/yt-cli/issues"
Changelog = "https://github.com/ryan-murphy/yt-cli/blob/main/CHANGELOG.md"

[project.scripts]
yt = "youtrack_cli.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youtrack_cli"]

[tool.hatch.build.targets.wheel.force-include]
"youtrack_cli/py.typed" = "youtrack_cli/py.typed"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "Q",   # flake8-quotes
]
ignore = [
    "UP045",  # Use `X | None` for type annotations (Python 3.9 compatibility)
    "UP007",  # Use `X | Y` for type annotations (Python 3.9 compatibility)
    "UP006",  # Use `dict` instead of `Dict` (Python 3.9 compatibility)
    "UP035",  # `typing.Dict` is deprecated (Python 3.9 compatibility)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
# ty configuration can be added here if needed in the future

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["youtrack_cli"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a13",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.0.0",
    "ruff>=0.12.1",
    "tox>=4.27.0",
    "zizmor>=1.11.0",
    "twine>=6.1.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autobuild>=2021.3.14",
]
